# crowd-criticality

./: .gitignore  DECISIONS.md  IMPLEMENTATION_PLAN.md  Makefile  PRE_REGISTRATION.md  README.md  pyproject.toml  tradeoffs.md
.github/workflows/: ci.yaml
docs/superpowers/: HANDOFF-post-s0.1.md  HANDOFF-s0.1-build.md  HANDOFF-s0.4-stage1.md
results/s0.1_gate0a/: 2026-06-16_writedown.txt
results/s0.1_recovery/: 2026-06-16_coverage.txt
results/s0.1_snz_triangulation/: 2026-06-15_adversarial_verification.txt  2026-06-15_gate_a2_discrimination.txt  2026-06-15_reference_gate.txt  2026-06-15_writedown.txt
results/s0.4_feasibility/: 2026-06-16_granularity_crossreview_brief.md  2026-06-16_quantization_sweep.txt  2026-06-16_source_b_verification.md  2026-06-20_event_definition_probe.md  2026-06-21_first_realdata_gof.md  2026-06-21_hb_meanvar_check.md  (+26 more)
tests/: test_anchors.py  test_anchors_parrot.py  test_binned.py  test_branching.py  test_cascades_calibrate.py  test_cascades_extract.py  test_cascades_labels.py  test_crackling.py  test_csn.py  test_deffuant.py  test_exact.py  test_gate.py  test_gate0a.py  test_gate_a2.py  test_gate_specificity.py  test_hawkes_sim.py  test_lookalike.py  test_mle.py  test_mu_t.py  test_parrot.py  test_parrot_null_confirm.py  test_parrot_null_plumbing.py  test_powerlaw_ramp.py  test_recovery_grid.py  test_residuals.py  test_shakedown_discrim.py  test_shakedown_plumbing.py  test_smoke.py  test_types.py
verification/: s0.1_gate_a2_discrimination.py  s0.1_snz_estimator_triangulation.py  s0.1_snz_redo_diagnostics.py  s0.1_snz_reference_gate.py
(+80 files in other folders)
